[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/KANDEEE.jpg" type="Texture" id=1]
[ext_resource path="res://images/20170930_184517_3.jpg" type="Texture" id=2]
[ext_resource path="res://src/Actors/laser.gd" type="Script" id=3]
[ext_resource path="res://images/LaserBubble.png" type="Texture" id=4]
[ext_resource path="res://images/LaserFire.png" type="Texture" id=5]
[ext_resource path="res://images/laser2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 544 )

[node name="Laser" type="Area2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="LaserSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.30072, 28.3973 )
scale = Vector2( 0.419568, 0.347532 )
frames = SubResource( 1 )

[node name="LaserHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 544 )
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
